--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -5,6 +5,8 @@ name: CMake on a single platform
 on:
   push:
     branches: ["main"]
+    tags:
+      - "release"
   pull_request:
     branches: ["main"]
 
