--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -6,7 +6,7 @@ on:
   push:
     branches: ["main"]
     tags:
-      - "release.*"
+      - "*"
   pull_request:
     branches: ["main"]
 
@@ -70,6 +70,6 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v2
-        # if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: release/*
