--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -4,8 +4,11 @@ name: CMake on a single platform
 
 on:
   push:
+    branches: ["main"]
     tags:
       - "*"
+  pull_request:
+    branches: ["main"]
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -69,4 +72,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: release/*
+          files: "*"
