--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -76,11 +76,9 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            "release/*"
-            "release/*/*
-
-      - name: What is in here bro?
-        run: ls -Rla
+            "release/**/*"
+            "**/release/*"
+            "**/release/**
 
       - name: Create release assets branch
-        run: git checkout --orphan release && git add release/ && git commit -m "release" && git push -f --set-upstream origin release
+        run: git checkout --orphan release && git add release/ -f && git commit -m "release" && git push -f --set-upstream origin release
