ls -a, stry setup-git-user

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -71,6 +71,16 @@ jobs:
       - name: Run CMake Workflow
         run: cmake --workflow --preset=${{env.BUILD_PRESET}}
 
+      - name: What is in here bro?
+        run: ls -la ./
+
+      - name: What is in release ?
+        run: ls -la ./release/**
+
+      - uses: fregante/setup-git-user@v2
+      - name: Create release assets branch
+        run: git checkout --orphan release && git add release/ -f && git commit -m "release" && git push -f --set-upstream origin release
+
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
@@ -79,6 +89,3 @@ jobs:
             "release/**/*"
             "**/release/*"
             "**/release/**
-
-      - name: Create release assets branch
-        run: git checkout --orphan release && git add release/ -f && git commit -m "release" && git push -f --set-upstream origin release
