--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -68,8 +68,8 @@ jobs:
       - name: Run CMake Web Workflow
         run: cmake --workflow --preset=${{env.WEB_BUILD_PRESET}}
 
-      - name: Run CMake Workflow
-        run: cmake --workflow --preset=${{env.BUILD_PRESET}}
+      # - name: Run CMake Workflow
+      #   run: cmake --workflow --preset=${{env.BUILD_PRESET}}
 
       - name: What is in here bro?
         run: ls -la ./
