fix rm --cached

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -79,7 +79,7 @@ jobs:
 
       - uses: fregante/setup-git-user@v2
       - name: Create release assets branch
-        run: git checkout --orphan release && git rm --cached * && git add release/ -f && git status && git commit -m "release" && git push -f --set-upstream origin release
+        run: git checkout --orphan release && git rm --cached -r . && git add release/ -f && git status && git commit -m "release" && git push -f --set-upstream origin release
 
       - name: Release
         uses: softprops/action-gh-release@v2
