--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -73,6 +73,7 @@ jobs:
 
       - uses: fregante/setup-git-user@v2
       - name: Create release assets branch
+        if: startsWith(github.ref, 'refs/tags/')
         run: git checkout --orphan release-artifacts && git rm --cached -r . && git add release/ -f && git status && git commit -m "release" && git push -f --set-upstream origin release-artifacts
 
       - name: Release
